--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,34 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/project-manager-3091'>Project Manager - ACI Worldwide Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/principal-project-manager-3093'>Principal Project Manager - ACI Worldwide Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reputation/12198c6f-15a2-4b54-84e4-70e599bc082b'>Reputation.com - Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/RPS1/743999698432274-project-manager-fixed-term'>RPS Project Manager - Fixed Term | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Australia</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PDDNINC/743999698430392-program-manager-aerospace-aviation-defense'>PDDN INC. Program Manager-Aerospace / Aviation / Defense | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">California</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698430619-hardware-npi-sustaining-operations-program-manager'>Square Hardware (NPI + Sustaining) Operations Program Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://nmhc.referrals.selectminds.com/jobs/program-manager-patient-accounting-admin-full-time-days-33320'>Program Manager, Patient Accounting Admin, Full-Time Days - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -52,11 +80,11 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698429771-deployment-operations-project-manager-leader-level-3'>Shore Consulting Deployment & Operations / Project Manager/Leader / Level 3 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShoreConsulting/743999698429771-deployment-operations-project-manager-leader-level-3'>Shore Consulting Deployment & Operations / Project Manager/Leader / Level 3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -84,7 +112,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424491-technical-project-manager-korean-speaking-is-mandatory'>Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424491-technical-project-manager-korean-speaking-is-mandatory'>Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -116,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/goalsyria/jobs/1937198'>Job Application for WASH Deputy Programme Manager ? implementation  at GOAL Syria</a></h5> 
+<h5><a href='https://boards.greenhouse.io/goalsyria/jobs/1937198'>Job Application for WASH Deputy Programme Manager ? implementation  at GOAL Syria</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -162,7 +190,7 @@
 <p><span class="badge badge-light">Austin, TXAustin, TX</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698402726-privacy-program-manager'>Visa Privacy Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698402726-privacy-program-manager'>Visa Privacy Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -178,7 +206,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oSLSafwp&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nv7mnMwC'>Herjavec Group Careers - Program Manager, Demand Generation</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oSLSafwp&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nv7mnMwC'>Herjavec Group Careers - Program Manager, Demand Generation</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -206,7 +234,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
+<h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -278,7 +306,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://owow1.recruitee.com/o/assistant-project-manager-oakland'>
+<h5><a href='https://owow1.recruitee.com/o/assistant-project-manager-oakland'>
       Assistant Project Manager - oWOW
     </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
@@ -290,7 +318,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twitch/jobs/4493847002'>Job Application for Sales Enablement Program Manager at Twitch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4493847002'>Job Application for Sales Enablement Program Manager at Twitch</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -314,7 +342,7 @@
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://astcorporation.applytojob.com/apply/UhXVbwW6sn/ERP-Project-Manager-Oracle-Canada'>ERP Project Manager - Oracle (Canada) - Applications Software Technology LLC - Career Page</a></h5> 
+<h5><a href='http://astcorporation.applytojob.com/apply/UhXVbwW6sn/ERP-Project-Manager-Oracle-Canada'>ERP Project Manager - Oracle (Canada) - Applications Software Technology LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -429,37 +457,6 @@ Policy and all answers provided by me within this application are true and corre
 <h5><a href='http://intellipro.applytojob.com/apply/9tKINfEbxG/DataOps-Project-Manager'>DataOps Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/xcEosLkWrl/Account-Project-Manager'>Account Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Santa Clara, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/8AL2r3rChj/Sr-Technical-Program-Manager'>Sr. Technical Program Manager - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Sunnyvale, CA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://www.monroeconsulting.com/job/Malaysia/APAC-Dynamics-Solution-Consultant/31409'>
-	Project Manager | Monroe Consulting Group
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q56aVfw0&k=Job&j=oTALafw8&__jvst=Employee&__jvsd=sC5n2hwS&__jvsc=Twitter&bid=nzEQmMwG'>CARFAX Canada Careers - Senior Project Manager</a></h5> 
-<p><span class="badge badge-light">Canada Canada Waterloo, Canada  London, ON  Canada</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999692438196-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694344947-project-manager-software-implementation-birmingham'>Fulton Garrick Ltd Project Manager - Software Implementation - Birmingham | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://municode.applytojob.com/apply/q00JYwyzgp/Web-Project-Manager'>Web Project Manager - Municode - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 13, 2019 ... Municode's website division is looking for a hands-on project manager with great 
-communication skills to lead all phases of our website redesign projects.</p>
 <hr/>
 
 
